--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ node_modules
 .vscode-test/
 *.vsix
 .home
+
+# Ignore tree-sitter wasm files. These files can be downloaded and genrated using get-wasm.sh and build-wasm.sh
+/a.out.js
+/a.out.wasm
+/tree-sitter-go.wasm
+/tree-sitter.wasm
