--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "code readability",
     "developer tools"
   ],
-  "activationEvents": ["onStartupFinished"],
+  "activationEvents": [
+    "onStartupFinished"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "configuration": [
@@ -54,10 +56,12 @@
         }
       }
     ],
-    "commands": [{
-      "command": "fold-ninja.showMenuOptions",
-      "title": "fold ninja: show menu options"
-    }]
+    "commands": [
+      {
+        "command": "fold-ninja.showMenuOptions",
+        "title": "fold ninja: show menu options"
+      }
+    ]
   },
   "repository": {
     "type": "git",
@@ -82,6 +86,7 @@
     "@typescript-eslint/parser": "^6.15.0",
     "@vscode/test-cli": "^0.0.4",
     "@vscode/test-electron": "^2.3.8",
+    "copy-webpack-plugin": "^12.0.2",
     "eslint": "^8.56.0",
     "tree-sitter-cli": "^0.20.8",
     "tree-sitter-go": "^0.20.0",
