--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@vscode/test-electron": "^2.3.8",
     "copy-webpack-plugin": "^12.0.2",
     "eslint": "^8.56.0",
+    "tree-sitter-c": "^0.20.7",
     "tree-sitter-cli": "^0.20.8",
     "tree-sitter-go": "^0.20.0",
     "ts-loader": "^9.5.1",
