--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fold-ninja",
   "displayName": "Fold Ninja",
   "description": "Enhance code readability by folding (manually or automatically) verbose sections and comments across multiple languages.",
-  "version": "0.4.6",
+  "version": "0.4.7",
   "publisher": "ietxaniz",
   "icon": "doc/fold-ninja.png",
   "engines": {
@@ -16,6 +16,8 @@
     "go fold",
     "code folding",
     "golang",
+    "react",
+    "typescript",
     "code review",
     "readability"
   ],
@@ -39,6 +41,16 @@
             "default": false,
             "description": "Determines whether a text region, if it partially matches the window's selection, should be allowed to fold."
           },
+          "fold-ninja.c-folded": {
+            "type": "string",
+            "default": "comment,import,decl",
+            "description": "Specifies comma separated tags in C language files that will be folded in compact mode."
+          },
+          "fold-ninja.c-intermediate-folded": {
+            "type": "string",
+            "default": "first-comment",
+            "description": "Specifies comma separated tags in C language files that will be folded in intermediate mode."
+          },
           "fold-ninja.go-folded": {
             "type": "string",
             "default": "comment,err,import,decl",
@@ -58,8 +70,17 @@
             "type": "string",
             "default": "import,first-comment,func,decl,jsx,class",
             "description": "Specifies comma separated tags in tsx language files that will be folded in intermediate mode."
+          },
+          "fold-ninja.typescript-folded": {
+            "type": "string",
+            "default": "import,comment,func,decl,class",
+            "description": "Specifies comma separated tags in typescfipt language files that will be folded in compact mode."
+          },
+          "fold-ninja.typescript-intermediate-folded": {
+            "type": "string",
+            "default": "import,first-comment,func,decl",
+            "description": "Specifies comma separated tags in typescfipt language files that will be folded in intermediate mode."
           }
-
         }
       }
     ],
